fix z-index

--- a/src/sass/layout/_slider.scss
+++ b/src/sass/layout/_slider.scss
@@ -1,5 +1,4 @@
 .slider {
-  z-index: 1;
   margin-bottom: 50px;
 }
 .slider__cell {
@@ -13,7 +12,6 @@
   height: 430px;
 }
 .slider__img {
-  z-index: 999;
   border-radius: 5px;
   transition: transform 0.25s;
 }
